# Talk2Data

./: .gitignore  main.py  pyproject.toml
DB/: OrderDB query.sql  SQLQuery3.sql  SQLQuery4.sql
Talk2Data Backend/: .env  .gitignore  pyproject.toml  test_sqlserver_connection.py
Talk2Data Backend/app/: SqlServerTest.py  main.py
Talk2Data Backend/app/api/: multidb_routes.py  routes.py
Talk2Data Backend/app/db/: connection.py  database.py  multidb_manager.py
Talk2Data Backend/app/utils/: config.py  schema_extractor.py  semantic_selector.py
Talk2Data Frontend/: index.html  package-lock.json  package.json
Talk2Data Frontend/src/: App.css  App.jsx  main.jsx
app/: main.py
app/api/: multidb_routes.py
app/db/: models.py  multidb_manager.py
app/llm/: gpt_model.py
app/utils/: db_selector.py  semantic_selector.py
