[project]
name = "talk2data"
version = "0.1.0"
description = "“Conversational Text-to-SQL API using FastAPI”"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
