[project]
name = "talk2data"
version = "0.1.0"
description = "“Conversational Text-to-SQL API using FastAPI”"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic[dotenv] (>=2.12.3,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pytest (>=8.4.2,<9.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "python-decouple (>=3.8,<4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
